Add fb-manager.js and update main-display.js to include Facebook management functionality; improve dropdown handling and code readability

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <script src=asset/bootstrap.bundle.min.js></script>
     <script src="js/notify.js"></script>
     <script src="js/file-manager.js"></script>
+    <script src="js/fb-manager.js"></script><!-- TODO -->
     <script src="js/main-display.js"></script>
     <script>
         mainDisplay.init();
